tests/semantic/valid/79_i10_override_chain.hulk
type GrandParent() {
    greet() => "gp";
}
type Parent( ) inherits GrandParent() {}
type Child( ) inherits Parent() {
    greet() => "child";
}
let c = new Child() in print(c.greet());
