tests/semantic/invalid/68_g_for_no_current.hulk
type BadIter() {
    next() => true;
}
for (x in new BadIter()) print(x);
